--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
   "author": "simon",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
+    "jwt-simple": "^0.5.1",
     "mongoose": "^4.11.11"
   },
   "devDependencies": {
